packages/scaml.1.2.0~pre7/tests/fail/experiment_function_storage.ml
open SCaml
let main (x : unit) y =
  [],
  (Some (fun (y : int) -> y))
